--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,14 +1,16 @@
 {
+    "Created at": "Créé le",
+    "Difficulty": "Difficulté",
+    "Group": "Groupe",
+    "Price": "Prix",
+    "Recipes": "Recettes",
+    "Remember me": "Se rappeler de moi",
+    "Total Time": "Temps total",
+    "Users": "Utilisateurs",
     "Bonjour :name": "Bonjour :name",
     "No account ? Register.": "Vous n'avez pas encore de compte ? Créez en un !",
     "Active": "Actif(ve)",
     "Account creation:": "Création de compte",
-    "Activate Email recipe suggestions": "Recevoir des suggestions de recettes par email",
-    "Confirm password": "Confirmer le mot de passe",
-    "Email": "E-mail",
-    "Fullname": "Nom complet",
-    "Inactive": "Inactif(ve)",
-    "Integrations": "Intégrations",
     "Place's name": "Nom de l'emplacement",
     "Latitude": "Latitude",
     "Link your account": "Liez votre compte",
@@ -29,15 +31,15 @@
     "Register": "Créer un compte",
     "Save": "Sauvegarder",
     "Profile": "Profil",
+    "Activate Email recipe suggestions": "Recevoir des suggestions de recettes par email",
+    "Confirm password": "Confirmer le mot de passe",
+    "Email": "E-mail",
+    "Fullname": "Nom complet",
+    "Inactive": "Inactif(ve)",
+    "Integrations": "Intégrations",
     "Searching": "Recherche...",
     "Set your avatar on": "Définissez votre avatar sur",
     "Something went wrong": "Quelque chose s'est mal passé.",
     "Your informations": "Vos informations",
-    "Your validation code for": "Votre code de validation pour",
-    "Pagination Navigation": "Navigation de pagination",
-    "Showing": "Affichage de",
-    "to": "à",
-    "of": "de",
-    "results": "résultats",
-    "No data available in table": "Aucune donnée disponible dans le tableau"
+    "Your validation code for": "Votre code de validation pour"
 }
