--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,4 +1,5 @@
 {
+    "Search": "Rechercher",
     "Created at": "Créé le",
     "Difficulty": "Difficulté",
     "Group": "Groupe",
@@ -8,9 +9,6 @@
     "Total Time": "Temps total",
     "Users": "Utilisateurs",
     "Bonjour :name": "Bonjour :name",
-    "No account ? Register.": "Vous n'avez pas encore de compte ? Créez en un !",
-    "Active": "Actif(ve)",
-    "Account creation:": "Création de compte",
     "Place's name": "Nom de l'emplacement",
     "Latitude": "Latitude",
     "Link your account": "Liez votre compte",
@@ -22,6 +20,9 @@
     "Name": "Prénom",
     "Password": "Mot de passe",
     "Profile updated!": "Profil mis à jour !",
+    "No account ? Register.": "Vous n'avez pas encore de compte ? Créez en un !",
+    "Active": "Actif(ve)",
+    "Account creation:": "Création de compte",
     "Dessert": "Dessert",
     "Entrée": "Entrée",
     "Please check that the app is running well with your administrator.": "Prenez contact avec votre administrateur pour vérifier le bon fonctionnement de l'application.",
