--- a/lang/fr.json
+++ b/lang/fr.json
@@ -20,6 +20,9 @@
     "Name": "Prénom",
     "Password": "Mot de passe",
     "Profile updated!": "Profil mis à jour !",
+    "Mes recettes <b>favorites<\/b>": "My <b>favorite<\/b> recipes",
+    "Mes recettes favorites": "My favorite recipes",
+    "Yesterday": "Vos informations",
     "No account ? Register.": "Vous n'avez pas encore de compte ? Créez en un !",
     "Active": "Actif(ve)",
     "Account creation:": "Création de compte",
