--- a/lang/fr.json
+++ b/lang/fr.json
@@ -9,6 +9,7 @@
     "Total Time": "Temps total",
     "Users": "Utilisateurs",
     "Bonjour :name": "Bonjour :name",
+    "Yesterday": "Hier",
     "Place's name": "Nom de l'emplacement",
     "Latitude": "Latitude",
     "Link your account": "Liez votre compte",
@@ -22,7 +23,6 @@
     "Profile updated!": "Profil mis à jour !",
     "Mes recettes <b>favorites<\/b>": "My <b>favorite<\/b> recipes",
     "Mes recettes favorites": "My favorite recipes",
-    "Yesterday": "Vos informations",
     "No account ? Register.": "Vous n'avez pas encore de compte ? Créez en un !",
     "Active": "Actif(ve)",
     "Account creation:": "Création de compte",
