--- a/lang/fr.json
+++ b/lang/fr.json
@@ -22,6 +22,7 @@
     "Password": "Mot de passe",
     "Profile updated!": "Profil mis à jour !",
     "Mes recettes <b>favorites<\/b>": "My <b>favorite<\/b> recipes",
+    "Today": "Aujourd'hui",
     "Mes recettes favorites": "My favorite recipes",
     "No account ? Register.": "Vous n'avez pas encore de compte ? Créez en un !",
     "Active": "Actif(ve)",
