--- a/lang/fr.json
+++ b/lang/fr.json
@@ -5,6 +5,7 @@
     "Group": "Groupe",
     "Price": "Prix",
     "Recipes": "Recettes",
+    "All rights reserved.": "Tous droits réservés.",
     "Remember me": "Se rappeler de moi",
     "Total Time": "Temps total",
     "Users": "Utilisateurs",
